Fix minor colour contrast warning

--- a/assets/sass/utilities/_utilities-text.scss
+++ b/assets/sass/utilities/_utilities-text.scss
@@ -65,8 +65,8 @@
 
 .u-caption {
     font-size: 14px;
-    color: rgba(255, 255, 255, 0.8);
-    background-color: rgba(0, 0, 0, 0.4);
+    color: white;
+    background-color: get-color('background', 'dark-neutral');
     padding: 4px 6px;
 }
 
